--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body{
     margin: 0;
     background-color: #e5e0d8;
     font-family: 'SimKyungha', sans-serif;
+    height: 100vh;
+    display: flex;
+    align-items: center;
 }
 .container{
     background-color: #e5d2b8;
